soluciones post-feedback: mostrar nombre de canal en post